build: store docker image to GHCR

--- a/Dockerfile-distroless
+++ b/Dockerfile-distroless
@@ -10,19 +10,15 @@ RUN set -eux; \
 
 ## 2nd stage
 
-FROM eclipse-temurin:17.0.4.1_1-jre-jammy
+FROM gcr.io/distroless/java17-debian11:nonroot
 
 EXPOSE 8080
 WORKDIR /app
-
-RUN set -eux; \
-    groupadd -r -g 999 app; \
-    useradd -r -u 999 -g app -l -d /app app
 
 COPY --from=build /dist/dependencies/ .
 COPY --from=build /dist/spring-boot-loader/ .
 COPY --from=build /dist/snapshot-dependencies/ .
 COPY --from=build /dist/application/ .
 
-USER app
-ENTRYPOINT exec java $JAVA_OPTS org.springframework.boot.loader.JarLauncher
+ENTRYPOINT [ "java" ]
+CMD [ "org.springframework.boot.loader.JarLauncher" ]
